# samsaek

./: .env.example  .gitignore  Dockerfile  OPERATION_GUIDE.md  README.md  docker-compose.yml  enhanced_travel_agent.py  enhanced_voice_server.py  pyproject.toml  simplified_specialized_agents.py
docs/: PHONE_SETUP.md
docs/screenshots/: README.md
src/samsaek/: __init__.py
src/samsaek/core/: __init__.py  config.py  exceptions.py  logging.py
src/samsaek/services/a2a/: __init__.py  exceptions.py  gateway.py  models.py  protocol.py  security.py
src/samsaek/services/crew/: __init__.py  engine.py  models.py
src/samsaek/services/exa/: __init__.py  exceptions.py  models.py  service.py
src/samsaek/services/gemini/: __init__.py  models.py  service.py
